--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,15 @@
 
 
 
+@keyframes subtle-shake {
+  0%   { transform: translate(0, 0) rotate(0deg); }
+  20%  { transform: translate(-1px, 1px) rotate(-0.5deg); }
+  40%  { transform: translate(1px, -1px) rotate(0.5deg); }
+  60%  { transform: translate(-1px, -1px) rotate(-0.3deg); }
+  80%  { transform: translate(1px, 1px) rotate(0.3deg); }
+  100% { transform: translate(0, 0) rotate(0deg); }
+}
+
+.shaky {
+  animation: subtle-shake 0.35s infinite;
+}
