--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+
+html, body, #root {
+  background: transparent !important;
+  min-height: 100%;
+}
+
+
+
 @font-face {
   font-family: "StrangerThings";
   src: url("fonts/ITC-Benguiat-Bold.otf") format("truetype");
@@ -158,4 +166,18 @@
 
 .shaky {
   animation: subtle-shake 0.35s infinite;
+}
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+    opacity: 0.6;
+  }
+  50% {
+    transform: translateY(-20px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 0.6;
+  }
 }
